--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marlboro Mustangs Ice Hockey</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="container">
-            <h1>Marlboro Mustangs Ice Hockey</h1>
-        </div>
-    </header>
-
-    <!-- Navbar Section -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Mustangs</a>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Marlboro Mustangs</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,38 +21,75 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="team.html">Roster</a>
+                        <a class="nav-link" href="team.html">Team</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="accomplishments.html">Accomplishments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="schedule.html">Schedule</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Main Content Section -->
-    <main class="container my-5">
-        <section id="home">
-            <h2>Welcome to the Marlboro Mustangs Ice Hockey Team</h2>
-            <p>Explore our team roster, accomplishments, and more!</p>
-        </section>
-    </main>
+    <!-- Hero Section -->
+    <div class="hero-section">
+        <div class="overlay">
+            <h1>Welcome to Marlboro Mustangs Ice Hockey</h1>
+            <p>Power, Passion, and Excellence</p>
+            <a href="team.html" class="btn btn-lg btn-primary">Meet the Team</a>
+        </div>
+    </div>
 
-    <!-- Footer Section -->
-    <footer class="text-center py-3">
-        <p>&copy; 2025 Marlboro Mustangs Ice Hockey. All rights reserved.</p>
+    <!-- Main Content -->
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <img src="team-image.jpg" class="card-img-top" alt="Team Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Team Roster</h5>
+                        <p class="card-text">Meet our talented players who bring their best to the ice.</p>
+                        <a href="team.html" class="btn btn-primary">View Roster</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <img src="accomplishments-image.jpg" class="card-img-top" alt="Accomplishments Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Accomplishments</h5>
+                        <p class="card-text">Explore our winning history and the highlights of the Mustangs' journey.
+                        </p>
+                        <a href="accomplishments.html" class="btn btn-primary">See Our Achievements</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <img src="schedule-image.jpg" class="card-img-top" alt="Schedule Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Game Schedule</h5>
+                        <p class="card-text">Check out our upcoming games and don’t miss a moment of the action!</p>
+                        <a href="schedule.html" class="btn btn-primary">View Schedule</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark text-white text-center py-4">
+        <p>&copy; 2024 Marlboro Mustangs Ice Hockey. All Rights Reserved.</p>
     </footer>
 
-    <!-- JavaScript files -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
